k8s-service-1/kubernetes/istio-service-1-ns-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-service-1
  namespace: vj-istio
spec:
  selector:
    app: service-1
    release: test
  ports:
    - port: 8081
      name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8s-service-1
  namespace: vj-istio
  labels:
    release: test
    app: service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      release: test
      app: service-1
  template:
    metadata:
      labels:
        release: test
        app: service-1
    spec:
      containers:
      - name: k8s-service-1-container
        image: vprince/k8s-service-1-image:latest
        ports:
        - containerPort: 8081
