k8s-service-1/kubernetes/istio-service-1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-1-gateway
  namespace: vj-istio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-service-1
spec:
  hosts:
  - "*"
  gateways:
  - service-1-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: k8s-service-1
        port:
          number: 8081
